# everything-mcp

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  live-smoke.yml  release.yml
skills/everything-search/: SKILL.md
src/everything_mcp/: __init__.py  backend.py  config.py  server.py
tests/: live_smoke.py  test_backend.py  test_config.py  test_server.py
