[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything-mcp"
version = "1.0.6+latentmixer.1"
description = "The definitive MCP server for voidtools Everything - lightning-fast file search for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "elis132" },
]
keywords = [
    "mcp", "everything", "voidtools", "file-search", "claude",
    "codex", "gemini", "ai-agent", "model-context-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/latentmixer/everything-mcp"
Repository = "https://github.com/latentmixer/everything-mcp"
Issues = "https://github.com/latentmixer/everything-mcp/issues"
Changelog = "https://github.com/latentmixer/everything-mcp/blob/main/CHANGELOG.md"

[project.scripts]
everything-mcp = "everything_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/everything_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/everything_mcp", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

# ── Testing ───────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Linting ───────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["everything_mcp"]
